--- a/themes/startbootstrap-business-frontpage/templates/navigation.html
+++ b/themes/startbootstrap-business-frontpage/templates/navigation.html
@@ -13,6 +13,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ SITEURL }}/quienes-somos/directorio/">Directorio</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ SITEURL }}/datos-abiertos/inicio/">Datos Abiertos</a>
+                    </li>                    
                 </ul>
             </div>
         </div>
